--- a/homework/MoviesApp/app/views/movies/edit.html.erb
+++ b/homework/MoviesApp/app/views/movies/edit.html.erb
@@ -10,6 +10,6 @@
     <%= label_tag :year, "Year" %>
     <%= text_field_tag :year, @movie.year, size: 4 %>
   </p>
-  <%= submit_tag "Wazzzup" %>
+  <%= submit_tag "Submit" %>
 
 <% end %>
